--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Virus Excavator Home</title>
+
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <h1>Virus Excavator</h1>
